Abolish decks/; read decks from current directory

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# JSON files (decks are .json files, and we want to create test decks)
+*.json
